this is the version to backtest all hyperliquid pairs

--- a/backtest_config.json
+++ b/backtest_config.json
@@ -1,52 +1,223 @@
 {
     "strategies": {
         "Ichimoku": {
-            "enabled": false,
+            "enabled": true,
             "optimize": true
         },
         "RSIDivergence": {
-            "enabled": false,
+            "enabled": true,
             "optimize": true
         },
         "Bollinger": {
-            "enabled": false,
+            "enabled": true,
             "optimize": true
         },
         "VWAP": {
-            "enabled": false,
+            "enabled": true,
             "optimize": true
         },
         "RsiVwap": {
-            "enabled": false,
+            "enabled": true,
             "optimize": true
         },
         "StoicReversal": {
-            "enabled": false,
+            "enabled": true,
             "optimize": true
         },
         "AdaptiveStochasticReversal": {
-            "enabled": false,
+            "enabled": true,
             "optimize": true
         },
         "AtrReversion": {
-            "enabled": false,
+            "enabled": true,
             "optimize": true
         },
         "DynamicRetest": {
-            "enabled": false,
+            "enabled": true,
             "optimize": true
         },
         "EmaVolumeSync": {
-            "enabled": false,
+            "enabled": true,
             "optimize": true
         },
         "TrendLine": {
             "enabled": true,
             "optimize": true
+        },
+        "HawkesPro": {
+            "enabled": true,
+            "optimize": true
         }
     },
     "data_sources": {
-        "XRP_1h": "data/ohlcv/ohlcv_data_1h_XRPUSDT.csv"
+        "ACE_1h": "data/ohlcv/ohlcv_data_1h_ACEUSDT.csv",
+        "ADA_1h": "data/ohlcv/ohlcv_data_1h_ADAUSDT.csv",
+        "AI_1h": "data/ohlcv/ohlcv_data_1h_AIUSDT.csv",
+        "AI16Z_1h": "data/ohlcv/ohlcv_data_1h_AI16ZUSDT.csv",
+        "AIXBT_1h": "data/ohlcv/ohlcv_data_1h_AIXBTUSDT.csv",
+        "ALGO_1h": "data/ohlcv/ohlcv_data_1h_ALGOUSDT.csv",
+        "ALT_1h": "data/ohlcv/ohlcv_data_1h_ALTUSDT.csv",
+        "ANIME_1h": "data/ohlcv/ohlcv_data_1h_ANIMEUSDT.csv",
+        "APE_1h": "data/ohlcv/ohlcv_data_1h_APEUSDT.csv",
+        "APT_1h": "data/ohlcv/ohlcv_data_1h_APTUSDT.csv",
+        "AR_1h": "data/ohlcv/ohlcv_data_1h_ARUSDT.csv",
+        "ARB_1h": "data/ohlcv/ohlcv_data_1h_ARBUSDT.csv",
+        "ARK_1h": "data/ohlcv/ohlcv_data_1h_ARKUSDT.csv",
+        "ATOM_1h": "data/ohlcv/ohlcv_data_1h_ATOMUSDT.csv",
+        "AAVE_1h": "data/ohlcv/ohlcv_data_1h_AAVEUSDT.csv",
+        "AVAX_1h": "data/ohlcv/ohlcv_data_1h_AVAXUSDT.csv",
+        "BADGER_1h": "data/ohlcv/ohlcv_data_1h_BADGERUSDT.csv",
+        "BANANA_1h": "data/ohlcv/ohlcv_data_1h_BANANAUSDT.csv",
+        "BCH_1h": "data/ohlcv/ohlcv_data_1h_BCHUSDT.csv",
+        "BIGTIME_1h": "data/ohlcv/ohlcv_data_1h_BIGTIMEUSDT.csv",
+        "BIO_1h": "data/ohlcv/ohlcv_data_1h_BIOUSDT.csv",
+        "BLAST_1h": "data/ohlcv/ohlcv_data_1h_BLASTUSDT.csv",
+        "BLUR_1h": "data/ohlcv/ohlcv_data_1h_BLURUSDT.csv",
+        "BLZ_1h": "data/ohlcv/ohlcv_data_1h_BLZUSDT.csv",
+        "BNB_1h": "data/ohlcv/ohlcv_data_1h_BNBUSDT.csv",
+        "BNT_1h": "data/ohlcv/ohlcv_data_1h_BNTUSDT.csv",
+        "BOME_1h": "data/ohlcv/ohlcv_data_1h_BOMEUSDT.csv",
+        "BONK_1h": "data/ohlcv/ohlcv_data_1h_1000BONKUSDT.csv",
+        "BRETT_1h": "data/ohlcv/ohlcv_data_1h_BRETTUSDT.csv",
+        "BSV_1h": "data/ohlcv/ohlcv_data_1h_BSVUSDT.csv",
+        "BTC_1h": "data/ohlcv/ohlcv_data_1h_BTCUSDT.csv",
+        "CAKE_1h": "data/ohlcv/ohlcv_data_1h_CAKEUSDT.csv",
+        "CATI_1h": "data/ohlcv/ohlcv_data_1h_CATIUSDT.csv",
+        "CELO_1h": "data/ohlcv/ohlcv_data_1h_CELOUSDT.csv",
+        "CFX_1h": "data/ohlcv/ohlcv_data_1h_CFXUSDT.csv",
+        "CHILLGUY_1h": "data/ohlcv/ohlcv_data_1h_CHILLGUYUSDT.csv",
+        "COMP_1h": "data/ohlcv/ohlcv_data_1h_COMPUSDT.csv",
+        "CRV_1h": "data/ohlcv/ohlcv_data_1h_CRVUSDT.csv",
+        "DOGS_1h": "data/ohlcv/ohlcv_data_1h_DOGSUSDT.csv",
+        "DOGE_1h": "data/ohlcv/ohlcv_data_1h_DOGEUSDT.csv",
+        "DOT_1h": "data/ohlcv/ohlcv_data_1h_DOTUSDT.csv",
+        "DYM_1h": "data/ohlcv/ohlcv_data_1h_DYMUSDT.csv",
+        "DYDX_1h": "data/ohlcv/ohlcv_data_1h_DYDXUSDT.csv",
+        "EIGEN_1h": "data/ohlcv/ohlcv_data_1h_EIGENUSDT.csv",
+        "ENA_1h": "data/ohlcv/ohlcv_data_1h_ENAUSDT.csv",
+        "ENS_1h": "data/ohlcv/ohlcv_data_1h_ENSUSDT.csv",
+        "ETC_1h": "data/ohlcv/ohlcv_data_1h_ETCUSDT.csv",
+        "ETH_1h": "data/ohlcv/ohlcv_data_1h_ETHUSDT.csv",
+        "ETHFI_1h": "data/ohlcv/ohlcv_data_1h_ETHFIUSDT.csv",
+        "FARTCOIN_1h": "data/ohlcv/ohlcv_data_1h_FARTCOINUSDT.csv",
+        "FET_1h": "data/ohlcv/ohlcv_data_1h_FETUSDT.csv",
+        "FIL_1h": "data/ohlcv/ohlcv_data_1h_FILUSDT.csv",
+        "FLOKI_1h": "data/ohlcv/ohlcv_data_1h_1000FLOKIUSDT.csv",
+        "FTM_1h": "data/ohlcv/ohlcv_data_1h_FTMUSDT.csv",
+        "FTT_1h": "data/ohlcv/ohlcv_data_1h_FTTUSDT.csv",
+        "FXS_1h": "data/ohlcv/ohlcv_data_1h_FXSUSDT.csv",
+        "GALA_1h": "data/ohlcv/ohlcv_data_1h_GALAUSDT.csv",
+        "GAS_1h": "data/ohlcv/ohlcv_data_1h_GASUSDT.csv",
+        "GMX_1h": "data/ohlcv/ohlcv_data_1h_GMXUSDT.csv",
+        "GMT_1h": "data/ohlcv/ohlcv_data_1h_GMTUSDT.csv",
+        "GOAT_1h": "data/ohlcv/ohlcv_data_1h_GOATUSDT.csv",
+        "GRASS_1h": "data/ohlcv/ohlcv_data_1h_GRASSUSDT.csv",
+        "GRIFFAIN_1h": "data/ohlcv/ohlcv_data_1h_GRIFFAINUSDT.csv",
+        "HBAR_1h": "data/ohlcv/ohlcv_data_1h_HBARUSDT.csv",
+        "HMSTR_1h": "data/ohlcv/ohlcv_data_1h_HMSTRUSDT.csv",
+        "HYPE_1h": "data/ohlcv/ohlcv_data_1h_HYPEUSDT.csv",
+        "ILV_1h": "data/ohlcv/ohlcv_data_1h_ILVUSDT.csv",
+        "IMX_1h": "data/ohlcv/ohlcv_data_1h_IMXUSDT.csv",
+        "INJ_1h": "data/ohlcv/ohlcv_data_1h_INJUSDT.csv",
+        "IO_1h": "data/ohlcv/ohlcv_data_1h_IOUSDT.csv",
+        "IOTA_1h": "data/ohlcv/ohlcv_data_1h_IOTAUSDT.csv",
+        "JELLY_1h": "data/ohlcv/ohlcv_data_1h_JELLYUSDT.csv",
+        "JTO_1h": "data/ohlcv/ohlcv_data_1h_JTOUSDT.csv",
+        "JUP_1h": "data/ohlcv/ohlcv_data_1h_JUPUSDT.csv",
+        "KAS_1h": "data/ohlcv/ohlcv_data_1h_KASUSDT.csv",
+        "LDO_1h": "data/ohlcv/ohlcv_data_1h_LDOUSDT.csv",
+        "LINK_1h": "data/ohlcv/ohlcv_data_1h_LINKUSDT.csv",
+        "LISTA_1h": "data/ohlcv/ohlcv_data_1h_LISTAUSDT.csv",
+        "LOOM_1h": "data/ohlcv/ohlcv_data_1h_LOOMUSDT.csv",
+        "LTC_1h": "data/ohlcv/ohlcv_data_1h_LTCUSDT.csv",
+        "LUNC_1h": "data/ohlcv/ohlcv_data_1h_LUNCUSDT.csv",
+        "MANTA_1h": "data/ohlcv/ohlcv_data_1h_MANTAUSDT.csv",
+        "MATIC_1h": "data/ohlcv/ohlcv_data_1h_MATICUSDT.csv",
+        "MAV_1h": "data/ohlcv/ohlcv_data_1h_MAVUSDT.csv",
+        "MAVIA_1h": "data/ohlcv/ohlcv_data_1h_MAVIAUSDT.csv",
+        "ME_1h": "data/ohlcv/ohlcv_data_1h_MEUSDT.csv",
+        "MELANIA_1h": "data/ohlcv/ohlcv_data_1h_MELANIAUSDT.csv",
+        "MEME_1h": "data/ohlcv/ohlcv_data_1h_MEMEUSDT.csv",
+        "MEW_1h": "data/ohlcv/ohlcv_data_1h_MEWUSDT.csv",
+        "MINA_1h": "data/ohlcv/ohlcv_data_1h_MINAUSDT.csv",
+        "MKR_1h": "data/ohlcv/ohlcv_data_1h_MKRUSDT.csv",
+        "MOODENG_1h": "data/ohlcv/ohlcv_data_1h_MOODENGUSDT.csv",
+        "MORPHO_1h": "data/ohlcv/ohlcv_data_1h_MORPHOUSDT.csv",
+        "MOVE_1h": "data/ohlcv/ohlcv_data_1h_MOVEUSDT.csv",
+        "MYRO_1h": "data/ohlcv/ohlcv_data_1h_MYROUSDT.csv",
+        "NEAR_1h": "data/ohlcv/ohlcv_data_1h_NEARUSDT.csv",
+        "NEIRO_1h": "data/ohlcv/ohlcv_data_1h_NEIROUSDT.csv",
+        "NEIROETH_1h": "data/ohlcv/ohlcv_data_1h_NEIROETHUSDT.csv",
+        "NEO_1h": "data/ohlcv/ohlcv_data_1h_NEOUSDT.csv",
+        "NOT_1h": "data/ohlcv/ohlcv_data_1h_NOTUSDT.csv",
+        "NTRN_1h": "data/ohlcv/ohlcv_data_1h_NTRNUSDT.csv",
+        "OGN_1h": "data/ohlcv/ohlcv_data_1h_OGNUSDT.csv",
+        "OMNI_1h": "data/ohlcv/ohlcv_data_1h_OMNIUSDT.csv",
+        "ONDO_1h": "data/ohlcv/ohlcv_data_1h_ONDOUSDT.csv",
+        "OP_1h": "data/ohlcv/ohlcv_data_1h_OPUSDT.csv",
+        "ORBS_1h": "data/ohlcv/ohlcv_data_1h_ORBSUSDT.csv",
+        "ORDI_1h": "data/ohlcv/ohlcv_data_1h_ORDIUSDT.csv",
+        "PANDORA_1h": "data/ohlcv/ohlcv_data_1h_PANDORAUSDT.csv",
+        "PENDLE_1h": "data/ohlcv/ohlcv_data_1h_PENDLEUSDT.csv",
+        "PENGU_1h": "data/ohlcv/ohlcv_data_1h_PENGUUSDT.csv",
+        "PEOPLE_1h": "data/ohlcv/ohlcv_data_1h_PEOPLEUSDT.csv",
+        "PEPE_1h": "data/ohlcv/ohlcv_data_1h_PEPEUSDT.csv",
+        "PIXEL_1h": "data/ohlcv/ohlcv_data_1h_PIXELUSDT.csv",
+        "PNUT_1h": "data/ohlcv/ohlcv_data_1h_PNUTUSDT.csv",
+        "POL_1h": "data/ohlcv/ohlcv_data_1h_POLUSDT.csv",
+        "POLYX_1h": "data/ohlcv/ohlcv_data_1h_POLYXUSDT.csv",
+        "POPCAT_1h": "data/ohlcv/ohlcv_data_1h_POPCATUSDT.csv",
+        "PURR_1h": "data/ohlcv/ohlcv_data_1h_PURRUSDT.csv",
+        "PYTH_1h": "data/ohlcv/ohlcv_data_1h_PYTHUSDT.csv",
+        "RDNT_1h": "data/ohlcv/ohlcv_data_1h_RDNTUSDT.csv",
+        "RENDER_1h": "data/ohlcv/ohlcv_data_1h_RENDERUSDT.csv",
+        "REQ_1h": "data/ohlcv/ohlcv_data_1h_REQUSDT.csv",
+        "REZ_1h": "data/ohlcv/ohlcv_data_1h_REZUSDT.csv",
+        "RNDR_1h": "data/ohlcv/ohlcv_data_1h_RNDRUSDT.csv",
+        "RSR_1h": "data/ohlcv/ohlcv_data_1h_RSRUSDT.csv",
+        "RUNE_1h": "data/ohlcv/ohlcv_data_1h_RUNEUSDT.csv",
+        "S_1h": "data/ohlcv/ohlcv_data_1h_SUSDT.csv",
+        "SAGA_1h": "data/ohlcv/ohlcv_data_1h_SAGAUSDT.csv",
+        "SAND_1h": "data/ohlcv/ohlcv_data_1h_SANDUSDT.csv",
+        "SCR_1h": "data/ohlcv/ohlcv_data_1h_SCRUSDT.csv",
+        "SEI_1h": "data/ohlcv/ohlcv_data_1h_SEIUSDT.csv",
+        "SHIB_1h": "data/ohlcv/ohlcv_data_1h_1000SHIBUSDT.csv",
+        "SNX_1h": "data/ohlcv/ohlcv_data_1h_SNXUSDT.csv",
+        "SOL_1h": "data/ohlcv/ohlcv_data_1h_SOLUSDT.csv",
+        "SPX_1h": "data/ohlcv/ohlcv_data_1h_SPXUSDT.csv",
+        "STG_1h": "data/ohlcv/ohlcv_data_1h_STGUSDT.csv",
+        "STRAX_1h": "data/ohlcv/ohlcv_data_1h_STRAXUSDT.csv",
+        "STRK_1h": "data/ohlcv/ohlcv_data_1h_STRKUSDT.csv",
+        "STX_1h": "data/ohlcv/ohlcv_data_1h_STXUSDT.csv",
+        "SUI_1h": "data/ohlcv/ohlcv_data_1h_SUIUSDT.csv",
+        "SUPER_1h": "data/ohlcv/ohlcv_data_1h_SUPERUSDT.csv",
+        "SUSHI_1h": "data/ohlcv/ohlcv_data_1h_SUSHIUSDT.csv",
+        "TAO_1h": "data/ohlcv/ohlcv_data_1h_TAOUSDT.csv",
+        "TIA_1h": "data/ohlcv/ohlcv_data_1h_TIAUSDT.csv",
+        "TNSR_1h": "data/ohlcv/ohlcv_data_1h_TNSRUSDT.csv",
+        "TON_1h": "data/ohlcv/ohlcv_data_1h_TONUSDT.csv",
+        "TRB_1h": "data/ohlcv/ohlcv_data_1h_TRBUSDT.csv",
+        "TRX_1h": "data/ohlcv/ohlcv_data_1h_TRXUSDT.csv",
+        "TRUMP_1h": "data/ohlcv/ohlcv_data_1h_TRUMPUSDT.csv",
+        "TURBO_1h": "data/ohlcv/ohlcv_data_1h_TURBOUSDT.csv",
+        "UMA_1h": "data/ohlcv/ohlcv_data_1h_UMAUSDT.csv",
+        "UNI_1h": "data/ohlcv/ohlcv_data_1h_UNIUSDT.csv",
+        "USUAL_1h": "data/ohlcv/ohlcv_data_1h_USUALUSDT.csv",
+        "VINE_1h": "data/ohlcv/ohlcv_data_1h_VINEUSDT.csv",
+        "VIRTUAL_1h": "data/ohlcv/ohlcv_data_1h_VIRTUALUSDT.csv",
+        "VVV_1h": "data/ohlcv/ohlcv_data_1h_VVVUSDT.csv",
+        "W_1h": "data/ohlcv/ohlcv_data_1h_WUSDT.csv",
+        "WIF_1h": "data/ohlcv/ohlcv_data_1h_WIFUSDT.csv",
+        "WLD_1h": "data/ohlcv/ohlcv_data_1h_WLDUSDT.csv",
+        "XAI_1h": "data/ohlcv/ohlcv_data_1h_XAIUSDT.csv",
+        "XLM_1h": "data/ohlcv/ohlcv_data_1h_XLMUSDT.csv",
+        "XRP_1h": "data/ohlcv/ohlcv_data_1h_XRPUSDT.csv",
+        "YGG_1h": "data/ohlcv/ohlcv_data_1h_YGGUSDT.csv",
+        "ZEN_1h": "data/ohlcv/ohlcv_data_1h_ZENUSDT.csv",
+        "ZEREBRO_1h": "data/ohlcv/ohlcv_data_1h_ZEREBROUSDT.csv",
+        "ZETA_1h": "data/ohlcv/ohlcv_data_1h_ZETAUSDT.csv",
+        "ZK_1h": "data/ohlcv/ohlcv_data_1h_ZKUSDT.csv",
+        "ZRO_1h": "data/ohlcv/ohlcv_data_1h_ZROUSDT.csv"
     },
     "backtest_settings": {
         "initial_capital": 1000000,
